//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message WhileListInfo {
	uint32   TCPHost         =1;  //IP地址
	uint32   TCPPort         =2;  //端口
	bytes    AddrCoin        =3;  //见证人地址
	bytes    AddrNet         =4;  //网络地址
}
